public sale edit

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <!-- FIRST SCREEN END -->
             <div class="presale-button">
                 <button id="prebutton" onclick="location.href=`https://buy.hbarbarian.club`" type="button">
-                    <span>Pre Sale - Click Here</span>
+                    <span>Public Sale Live Now - Click Here</span>
                   </button>
             </div>
             <div class="main-top">
@@ -1219,14 +1219,14 @@
                 number: 2,
                 title: "Main Hbarbarian Club Drop",
                 text:
-                    "10K Hbarbarians spawned to find their homes in this new world : December 2021"
+                    "10K Hbarbarians spawned to find their homes in this new world : January 2022"
             },
             {
                 complete: false,
                 number: 3,
                 title: "Hbarbarian Rarity Score and Hbarbarian Club Leaderboard",
                 text:
-                    " Onsite rarity checker will be enabled after the Sale is completed. Hbarbarians will be ranked based on the rarity of the traits they possess. " +
+                    " Onsite rarity checker will be enabled during the sale. Hbarbarians will be ranked based on the rarity of the traits they possess. " +
                     " Additionally we will bring the Hbarbarian Club Score, to the light, which will be one of the key factors in the Eco system. "
             },
             {
@@ -1234,7 +1234,7 @@
                 number: 4,
                 title: "Exciting Announcement ",
                 text:
-                    "Exciting annoucement regarding the next steps, planned for Hbarbarian Club : January 2022"
+                    "Exciting annoucement regarding the next steps, planned for Hbarbarian Club : March 2022"
             },
         ];
 
