--- a/index.html
+++ b/index.html
@@ -1215,7 +1215,7 @@
                     "Specifics will be announced soon."
             },
             {
-                complete: false,
+                complete: true,
                 number: 2,
                 title: "Main Hbarbarian Club Drop",
                 text:
