--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                             <li class="main-nav__item">
                                 <a class="main-nav__link js-scrolltoid" href="#cnt">Discord</a>
                             </li>
+                            <li class="main-nav__item">
+                                <a class="main-nav__link" href="https://rarity.hbarbarian.club" target="_blank">Rarity Checker</a>
+                            </li>
                             <!-- <li class="main-nav__item">
                                 <a class="main-nav__link js-scrolltoid" href="#faq">FAQ</a>
                             </li> -->
