--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
     <title>Hbarbarian Club</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link
-        href="https://fonts.googleapis.com/css2?family=Codystar&family=Darker+Grotesque:wght@400;500;600;700;800&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Codystar&family=Darker+Grotesque:wght@400;500;600;700;800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="assets/css/preloader.css">
     <link rel="shortcut icon" href="favicon.png">
@@ -125,11 +122,11 @@
                 <!-- <div class="first-screen__bg-2" data-bg="assets/img/first-screen-bottom.png" data-lazy-mob></div> -->
             </section>
             <!-- FIRST SCREEN END -->
-            <div class="presale-button">
+            <!-- <div class="presale-button">
                 <button id="prebutton" onclick="location.href=`https://buy.hbarbarian.club`" type="button">
                     <span>Public Sale Live Now - Click Here</span>
                   </button>
-            </div>
+            </div> -->
             <div class="main-top">
 
                 <!-- BEGIN THE MOST POPULAR -->
@@ -137,8 +134,7 @@
                     <div class="most-popular__main wrapper">
                         <div class="most-popular__cols">
                             <div class="most-popular__right">
-                                <h2 class="most-popular__title main-title main-title_align-left"
-                                    data-title="Know about us?">
+                                <h2 class="most-popular__title main-title main-title_align-left" data-title="Know about us?">
                                     <span class="main-title__text">About Hbarbarian Club</span>
                                 </h2>
                                 <p class="most-popular__text">Inspired by the community itself, Hbarbarian Club is one of the first major NFT projects, proudly minted on HederaHashgraph! </p>
@@ -151,19 +147,14 @@
                                 </ul>
                             </div>
                             <div class="most-popular__left">
-                                <img class="most-popular__image" src="assets/img/abt copy.jpg" alt=""
-                                    style="border-radius: 40px;">
+                                <img class="most-popular__image" src="assets/img/abt copy.jpg" alt="" style="border-radius: 40px;">
                             </div>
                         </div>
                     </div>
                 </div>
-                <img class="most-popular__left-element side-element"
-                    src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="assets/img/svg/side-element_2 copy.jpg" alt="" style="left:-100px;top:17%;">
+                <img class="most-popular__left-element side-element" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-lazy="assets/img/svg/side-element_2 copy.jpg" alt="" style="left:-100px;top:17%;">
 
-                <img class="what-you-get__right-element side-element"
-                    src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="assets/img/svg/side-element_1 copy.jpg" alt="" style="right:-100px;top:23%;">
+                <img class="what-you-get__right-element side-element" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-lazy="assets/img/svg/side-element_1 copy.jpg" alt="" style="right:-100px;top:23%;">
                 <!-- THE MOST POPULAR END -->
 
                 <!-- BEGIN WHAT YOU GET -->
@@ -362,7 +353,7 @@
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking2.jpg" alt="">
-                                              <!--<a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                            <!--<a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
                                             </a> -->
                                         </div>
@@ -370,7 +361,7 @@
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking.jpg" alt="">
-                                             <!-- <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                            <!-- <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
                                             </a> -->
                                         </div>
@@ -378,7 +369,7 @@
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking4.jpg" alt="">
-                                              <!-- <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                            <!-- <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
                                             </a> -->
                                         </div>
@@ -394,7 +385,7 @@
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking6.jpg" alt="">
-                                             <!-- <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                            <!-- <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
                                             </a> -->
                                         </div>
@@ -402,7 +393,7 @@
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking7.jpg" alt="">
-                                           <!--   <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                            <!--   <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
                                             </a> -->
                                         </div>
@@ -434,7 +425,7 @@
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking11.jpg" alt="">
-                                          <!--    <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                            <!--    <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
                                             </a> -->
                                         </div>
@@ -442,7 +433,7 @@
                                     <div class="box ui-slider__item js-slider-item">
                                         <div class="thumbnail ui-slider__image-wrap">
                                             <img class="ui-slider__image" src="assets/img/tokens/viking12.jpg" alt="">
-                                           <!--   <a class="trial__button button js-popup-open read-more" href="#trial-popup">
+                                            <!--   <a class="trial__button button js-popup-open read-more" href="#trial-popup">
                                                 <span class="button__text">Purchase</span>
                                             </a> -->
                                         </div>
@@ -559,8 +550,7 @@
                         <div class="responses-block__left">
 
 
-                            <h3 class="responses-block__title main-title main-title_align-left"
-                                data-title="The Road Map" id="testimonials">
+                            <h3 class="responses-block__title main-title main-title_align-left" data-title="The Road Map" id="testimonials">
                                 <span class="main-title__text">The Road Map</span>
 
                             </h3>
@@ -680,12 +670,8 @@
 
 
                 </div>
-                <img class="responses-block__left-element side-element"
-                    src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="assets/img/svg/side-element_2 copy.jpg" alt="" style="left:-100px;top:0;">
-                <img class="trial-block__right-element side-element"
-                    src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="assets/img/svg/side-element_1 copy.jpg" alt="" style="right:-80px;top:40%;">
+                <img class="responses-block__left-element side-element" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-lazy="assets/img/svg/side-element_2 copy.jpg" alt="" style="left:-100px;top:0;">
+                <img class="trial-block__right-element side-element" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-lazy="assets/img/svg/side-element_1 copy.jpg" alt="" style="right:-80px;top:40%;">
             </div>
             <!-- RESPONSES END -->
 
@@ -1208,44 +1194,35 @@
     </script> -->
     <script>
         let steps = document.querySelector("#steps");
-        let wizards = [
-            {
-                complete: true,
-                number: 1,
-                title: "Pixel Hbarbarian Drop",
-                text:
-                    "Seed phase on Gomint! Having Pixel Hbarbarians will provide the holder with benefits on the main Hbarbarian Club Sale. \n" +
-                    "Specifics will be announced soon."
-            },
-            {
-                complete: true,
-                number: 2,
-                title: "Main Hbarbarian Club Drop",
-                text:
-                    "10K Hbarbarians spawned to find their homes in this new world : January 2022"
-            },
-            {
-                complete: false,
-                number: 3,
-                title: "Hbarbarian Rarity Score and Hbarbarian Club Leaderboard",
-                text:
-                    " Onsite rarity checker will be enabled during the sale. Hbarbarians will be ranked based on the rarity of the traits they possess. " +
-                    " Additionally we will bring the Hbarbarian Club Score, to the light, which will be one of the key factors in the Eco system. "
-            },
-            {
-                complete: false,
-                number: 4,
-                title: "Exciting Announcement ",
-                text:
-                    "Exciting annoucement regarding the next steps, planned for Hbarbarian Club : March 2022"
-            },
-        ];
+        let wizards = [{
+            complete: true,
+            number: 1,
+            title: "Pixel Hbarbarian Drop",
+            text: "Seed phase on Gomint! Having Pixel Hbarbarians will provide the holder with benefits on the main Hbarbarian Club Sale. \n" +
+                "Specifics will be announced soon."
+        }, {
+            complete: true,
+            number: 2,
+            title: "Main Hbarbarian Club Drop",
+            text: "10K Hbarbarians spawned to find their homes in this new world : January 2022"
+        }, {
+            complete: false,
+            number: 3,
+            title: "Hbarbarian Rarity Score and Hbarbarian Club Leaderboard",
+            text: " Onsite rarity checker will be enabled during the sale. Hbarbarians will be ranked based on the rarity of the traits they possess. " +
+                " Additionally we will bring the Hbarbarian Club Score, to the light, which will be one of the key factors in the Eco system. "
+        }, {
+            complete: false,
+            number: 4,
+            title: "Exciting Announcement ",
+            text: "Exciting annoucement regarding the next steps, planned for Hbarbarian Club : March 2022"
+        }, ];
 
         let tickIcon = `<svg viewBox="0 0 512 512" width="100" title="check">
         <path d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z" />`;
 
         steps.innerHTML = wizards
-            .map(function (wizard) {
+            .map(function(wizard) {
                 return (
                     `<div class='step'>` +
                     `<div class='number ${wizard.complete && 'completed'}'>` +
@@ -1259,8 +1236,6 @@
                 );
             })
             .join("");
-
-
     </script>
 </body>
 
